# teach-go

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-katago.yml  ci.yml  release.yml
crates/gosensei-coaching/: Cargo.toml
crates/gosensei-coaching/src/: classify.rs  delta.rs  lib.rs  simplest.rs  templates.rs  types.rs
crates/gosensei-core/: Cargo.toml
crates/gosensei-core/src/: board.rs  game.rs  lib.rs  rules.rs  scoring.rs  types.rs
crates/gosensei-core/src/sgf/: mod.rs  parser.rs  tree.rs  writer.rs
crates/gosensei-katago/: Cargo.toml
crates/gosensei-katago/src/: client.rs  lib.rs  process.rs  protocol.rs
crates/gosensei-llm/: Cargo.toml
crates/gosensei-llm/src/: download.rs  error.rs  lib.rs  model.rs  parse.rs  prompt.rs  types.rs
docs/plans/: 2026-03-03-phase3-implementation.md  2026-03-03-phase3-p0-features-design.md  2026-03-09-robustness-polish.md
docs/superpowers/specs/: 2026-04-05-design-critique-remediation-design.md
scripts/: build-macos-appstore.sh  fetch-classical.sh  generate-macos-icons.sh  setup-katago.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/binaries/: analysis.cfg
src-tauri/capabilities/: default.json
src-tauri/entitlements/: GoSensei.entitlements  KataGo.entitlements
src-tauri/src/: coaching_db.rs  convert.rs  db.rs  download_manager.rs  error.rs  generate.rs  import.rs  lib.rs  main.rs  problem.rs  review.rs  seed_content.rs  setup.rs  skill.rs  solver.rs  srs.rs  state.rs
src-tauri/src/commands/: coaching.rs  game.rs  katago.rs  llm.rs  mod.rs  problem.rs  review.rs  settings.rs  sgf.rs  skill.rs
src-tauri/src/problems/: gogameguru-easy.sgf  gogameguru-hard.sgf  gogameguru-intermediate.sgf  guanzipu-1.sgf  guanzipu-2.sgf  guanzipu-3.sgf
src/components/: BoardToast.svelte  CoachingPanel.svelte  DifficultyPrompt.svelte  GameControls.svelte  MoveHistory.svelte  NewGameDialog.svelte  RadarChart.svelte  ReviewControls.svelte  ReviewMovePanel.svelte  ScoreBar.svelte  SettingsDialog.svelte  SetupDialog.svelte  SkillTrendChart.svelte  WinRateChart.svelte
src/lib/api/: commands.ts  events.ts  types.ts
src/lib/api/__tests__/: commands.test.ts
src/lib/audio/: sounds.ts
src/lib/board/: BoardCanvas.svelte  BoardSvg.svelte  interactions.ts  renderer.ts  themes.ts
src/lib/onboarding/: exercises.ts
src/lib/stores/: coaching.svelte.ts  download.svelte.ts  engine.svelte.ts  game.svelte.ts  llm.svelte.ts  problem.svelte.ts  review.svelte.ts  settings.svelte.ts  setup.svelte.ts  theme.svelte.ts
src/lib/utils/: colors.ts  coordinates.ts
src/views/: DashboardView.svelte  HomeView.svelte  OnboardingView.svelte  PlayView.svelte  ProblemView.svelte  ReviewView.svelte
tests/e2e/: package.json  tsconfig.json  wdio.conf.ts
tests/e2e/specs/: game-flow.spec.ts  navigation.spec.ts  problem.spec.ts  review.spec.ts  settings.spec.ts
