[package]
name = "gosensei-app"
description = "GoSensei — AI Go tutor desktop application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "gosensei-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.38", features = ["bundled"] }
rs-fsrs = { workspace = true }
chrono = { workspace = true }
gosensei-core = { path = "../crates/gosensei-core" }
gosensei-katago = { path = "../crates/gosensei-katago" }
gosensei-coaching = { path = "../crates/gosensei-coaching" }
gosensei-llm = { path = "../crates/gosensei-llm", optional = true }
reqwest = { version = "0.12", features = ["blocking"] }
which = "7"
zip = "2"

tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", optional = true }

[features]
default = ["mcp"]
mcp = ["tauri-plugin-mcp"]
llm = ["gosensei-llm/llm", "gosensei-llm"]
